--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@ window.addEventListener("scroll", handleScroll);
                             </div>
                         </div>
                         <div id="Services" class="section no-padding-bottom no-padding-top temp-footer" style="background-color: #222; padding: 20px; color: #fff; display: flex; flex-direction: column; align-items: center; text-align: center;">
-                            <a href="../favicon.png" target="_blank" class="w-inline-block">
-                                <img src="../favicon.png" loading="lazy" alt="Resolve Logo" class="resolve-footer-logo" style="width: 200px; height: auto; display: block;" />
+                            <a href="./images/favicon.png" target="_blank" class="w-inline-block">
+                                <img src="./images/favicon.png" loading="lazy" alt="Resolve Logo" class="resolve-footer-logo" style="width: 200px; height: auto; display: block;" />
                             </a>
                             <div class="footer-content resolve-section" style="margin-top: 20px; font-size: 16px; line-height: 1.5;">
                                 Blind cricket teaches us that determination knows no boundaries. In the world of silence and shadows, they find their light through passion, courage, and skill. Witness the beauty of cricket through sound, touch, and heart 
