--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>C.A.B.V</title>
-    <meta name="description" content="ToyFight&#174; an agency specializing in Experience Design.">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <meta property="og:title" content="C.A.B.V&#174;" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <meta property="og:image" content=" " />
     <meta property="og:description" content="C.A.B.V&#174; Cricket association in Vidarbha is a organisation which aims to promote blind cricket across the region of Vidarbha." />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon.png">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -451,7 +448,7 @@ window.addEventListener("scroll", handleScroll);
                 </head>
                 <body>
                     <div class="container">
-                        <button class="custom-button" style="--content: 'Donate Now!';">
+                        <button class="custom-button"  onclick="window.location.href='./donate.html';" style="--content: 'Donate Now!';">
                             <div class="left"></div>
                             Donate Now!
                             <div class="right"></div>
@@ -542,7 +539,7 @@ window.addEventListener("scroll", handleScroll);
                                 <div data-w-id="47f59d94-a6de-3a75-af1f-cde9f99594f5" style="opacity:0" class="divider color no-margin-bottom"></div>
                         </div>
                         </div>
-                        <button class="custom-button" style="--content: 'Donate Now!';">
+                        <button class="custom-button" onclick="window.location.href='./donate.html';" style="--content: 'Donate Now!';">
                             <div class="left"></div>
                             Donate Now!
                             <div class="right"></div>
