--- a/donate.html
+++ b/donate.html
@@ -72,15 +72,15 @@
         <p>Join us in creating a brighter future for blind cricketers. Your donation fuels the power of compassion, making every swing of the bat a testament to hope. Help them play with their hearts and see with their souls.</p>
         <h2>Donate Today!</h2>
         <div class="bank-details">
-          <p style="font-size: 16px;">Name: Master Anmol Sahu</p>
-          <p style="font-size: 16px;">Account No.: 60265252700</p>
-          <p style="font-size: 16px;">IFSC Code: MAHB0000731</p>
-          <p style="font-size: 16px;">Branch: BHOMA - 731</p>
+          <p style="font-size: 16px;">Name: Cricket Asociation for the Blind in Vidharbha</p>
+          <p style="font-size: 16px;">Account No.:872210210000022</p>
+          <p style="font-size: 16px;">IFSC Code: BKID008722 </p>
+          <p style="font-size: 16px;">Branch: Rana Pratapnagar</p>
       </div>
       
         <div class="donation-image">
             <a>
-              <img src="./images/donation.png" alt="" width="310" height="400">
+              <img src="./images/upi.png" alt="" width="280" height="300">
 
             </a>
         </div>
