--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@ window.addEventListener("scroll", handleScroll);
                                             <div class="footer-link-type">Code of Conduct</div>
                                         </a>
                                         <div class="footer-link">|</div>
-                                        <a href="#" class="footer-link w-inline-block js-open-contact wiggle-link">
+                                        <a href="#" class="footer-link w-inline-block">
                                             <div class="footer-link-type ">Contact Us</div>
                                         </a>
                                     </div>
