--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html lang="en-EN">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -47,14 +49,15 @@
             <div class="headerWrap">
                 <div class="mainBar">
                     <div class="menu">
-                        <a class="logo" href="/"></a>
+                        <a href="./index.html">
+                            <i class="fa-solid fa-house fa-fade fa-xl" style="color: #004bfa;"></i>
+                          </a>
+                        <div class="logus">
+                            <a class="logo" href="./index.html"></a>
+                          </div>    
                         <div class="toggleWrap">
-                           
-                            <div class="rightNav">
-
-
-                
-                                <ul>
+                        <div class="rightNav">
+                                  <ul>
                                     <li><a href="#" class="icon fb" target="_blank"></a>
                                     </li>
                                     <li><a href="#" class="icon in" target="_blank"></a></li>
