--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <div class="mainBar">
                     <div class="menu">
                         <a href="./index.html">
-                            <i class="fa-solid fa-house fa-fade fa-xl" style="color: #004bfa;"></i>
+                            <i class="fa-solid fa-house fa-fade fa-2xl" style="color: #004bfa;"></i>
                           </a>
                         <div class="logus">
                             <a class="logo" href="./index.html"></a>
