--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>C.A.B.V</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta property="og:title" content="C.A.B.V&#174;" />
+    <meta property="og:title" content="Cricket Accociation For The Blind in Vidharbha&#174;" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <meta property="og:image" content=" " />
-    <meta property="og:description" content="C.A.B.V&#174; Cricket association in Vidarbha is a organisation which aims to promote blind cricket across the region of Vidarbha." />
+    <meta property="og:description" content="Cricket Accociation For The Blind in Vidharbha &#174; Cricket association in Vidarbha is a organisation which aims to promote blind cricket across the region of Vidarbha." />
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon.png">
     <link rel="stylesheet" href="./css/nicepage.css" media="screen">
