--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ window.addEventListener("scroll", handleScroll);
             <div class="scrolling-content-wrap">
                 <div class="flex-vert-center masterhead js-masterhead js-full-height ">
                     <h1 class="letter-split">C.A.B.V</h1>
-                    <h2 class="letter-split">Cricket Accociation for the Blind in Vidharbha</h2>
+                    <h2 class="letter-split">Cricket Association for the Blind in Vidharbha</h2>
                     <style>
                         @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
                 
@@ -962,11 +962,11 @@ window.addEventListener("scroll", handleScroll);
                                 <Br> <p style="color: #1544C0; font-family: 'Ginger Bold'; font-size: 25px;">it's not just a sport; it's an inspiration.</p>
                             </div>
                             <div class="footer-v1-social" style="text-align: center; display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-                                <a href="" target="_blank" class="social-button w-inline-block">
-                                    <img src="https://uploads-ssl.webflow.com/617871f8849a56fd144246a9/617871f9849a5660db42474e_linkedin-icon-white.svg" alt="LinkedIn Icon" />
+                                <a href="https://www.facebook.com/profile.php?id=100082064976009&mibextid=ZbWKwL" target="_blank" class="social-button w-inline-block">
+                                    <img src="./images/icons/facebook.svg" alt="LinkedIn Icon" />
                                 </a>
-                                <a href="" target="_blank" class="social-button w-inline-block">
-                                    <img src="https://uploads-ssl.webflow.com/617871f8849a56fd144246a9/617871f9849a56e12c424740_instagram-icon-white.svg" alt="Instagram Icon" />
+                                <a href="https://x.com/BVidarbha?t=9_ucSceuA3bvmb4hGgeREQ&s=08" target="_blank" class="social-button w-inline-block">
+                                    <img src="./images/icons/sl_z_072523_61700_01.jpg" alt="Instagram Icon" />
                                 </a>
                             </div>
                             
@@ -997,7 +997,7 @@ window.addEventListener("scroll", handleScroll);
                             </div>
                             <div class="footer-bottom dark-bg">
                                 <div class="footer-bottom-left">
-                                    <div>© Copyright 2023 <a href="" target="_blank" class="link-white">Cricket Accociation for Blind Vidharbha</a></div>
+                                    <div>© Copyright 2023 <a href="" target="_blank" class="link-white">Cricket association for Blind Vidharbha</a></div>
                             </div>
                         </div>
                     </div>
